fix articles-holder z-index issue

--- a/corporate/containers/HomePage/styles.less
+++ b/corporate/containers/HomePage/styles.less
@@ -90,6 +90,7 @@ html {
   box-sizing: initial !important;
   border: 2px solid #CCC;
   max-height: 300px;
+  z-index: 10 !important;
   div {
     margin: 1px;
   }
@@ -223,6 +224,16 @@ div.toggle.has-error > div:first-child {
 
 .has-error .geosuggest__input {
   border: solid 2px red !important;
+}
+
+.articles-holder {
+
+  .row {
+     &.relative {
+       position: relative;
+       z-index: -10;
+     }
+  }
 }
 
 .post {
